--- a/ProyectoUniJob/ProyectoUniJob/Views/FrontEnd/MasterPage/_layoutUsuarios.cshtml
+++ b/ProyectoUniJob/ProyectoUniJob/Views/FrontEnd/MasterPage/_layoutUsuarios.cshtml
@@ -8,8 +8,7 @@
     <link href="~/Recursos/FontEnd/css/font-awesome.css" rel="stylesheet" type="text/css" media="all" /><!-- Fontawesome-CSS -->
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script type='text/javascript' src='~/Recursos/FontEnd/js/jquery-2.2.3.min.js'></script>
-
-    @*este es mio :v*@
+     @*este es mio :v*@
     <link href="~/Recursos/FontEnd/css/subasta.css" rel="stylesheet" />
     <!-- plugins clockpicker-->
     <script src="~/Recursos/FontEnd/js/clockpicker.js"></script>
@@ -17,6 +16,8 @@
     <link href="~/Recursos/FontEnd/css/standalone.css" rel="stylesheet" />
 
     <script src="https://code.jquery.com/jquery-3.2.1.js"></script>
+   
+
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
     <!-- finiliza clockpicker-->
     <!--Calificaciones -->
@@ -152,7 +153,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                                                             </div>
                                                             <div class="row centrar">
                                                                 <div class="col-sm-12">
-                                                                    <button type="submit" class="btn btn-success" name="agregar" value="1">Enviar</button>
+                                                                    <button type="submit" class="success" name="agregar" value="1">Enviar</button>
                                                                 </div>
                                                             </div>
                                                     }
