--- a/ProyectoUniJob/ProyectoUniJob/Views/Usuario/IndexEmpleador.cshtml
+++ b/ProyectoUniJob/ProyectoUniJob/Views/Usuario/IndexEmpleador.cshtml
@@ -19,28 +19,29 @@
                 <li id="pubTarea">Publicar una tarea</li>
                 <li id="pestMensajes">Mensajes</li>
                 <li id="pestPerfil">Perfil</li>
+                <li id="pestFinalizar">Finalizar Tarea</li>
             </ul>
-            <div class="resp-tabs-container hor_1">               
+            <div class="resp-tabs-container hor_1">
                 <div class="creditly-card-form agileinfo_form">
                     @using (Ajax.BeginForm("FiltroTareas", "Tareas", new AjaxOptions() { HttpMethod = "POST" }))
-                    {
-                        <div class="row">
-                            <div class="col-lg-3">
-                                <select name="Filtro" id="Filtro" class="form-control show-menu-arrow">
-                                    <option value="0">Todos</option>
-                                    <option value="1">Aprobados</option>
-                                    <option value="2">Rechazados</option>
-                                    <option value="3">Verificacion</option>
-                                    <option value="4">Eliminanda</option>
-                                    <option value="4">Ejecución</option>
-                                </select>
-                            </div>
-                            <div class="col-lg-3">
-                                <button class="btn btn-success">Aceptar</button>
-                            </div>
-                        </div>
-                    }
-                    
+        {
+            <div class="row">
+                <div class="col-lg-3">
+                    <select name="Filtro" id="Filtro" class="form-control show-menu-arrow">
+                        <option value="0">Todos</option>
+                        <option value="1">Aprobados</option>
+                        <option value="2">Rechazados</option>
+                        <option value="3">Verificacion</option>
+                        <option value="4">Eliminanda</option>
+                        <option value="4">Ejecución</option>
+                    </select>
+                </div>
+                <div class="col-lg-3">
+                    <button class="btn btn-success">Aceptar</button>
+                </div>
+            </div>
+}
+
                     <div id="MisTareas">
 
                     </div>
@@ -52,115 +53,124 @@
 
                 </div>
                 <!--Fin Publicar tarea-->
-
                 <!--Mensajes-->
                 <div id="mismensajes">
-
-
                 </div>
                 <!--Fin mensajes-->
-
                 <!--Perfil-->
                 <div id="perfil">
                 </div>
                 <!--Fin perfil-->
+                <!--Finalizar-->
+                    <div id="Finalizar">        
+                        @{ Html.RenderAction("EnviarCorreoView", "Tareas");}
+                    </div>
+                    <!--Fin Finalizar-->
+                    </div>
+
                 </div>
-                <!--Fin perfil-->
             </div>
+
         </div>
-        
-    </div>
 
-<script src="@Url.Content("~/Recursos/FrontEnd/js/jquery-2.0.3.min.js")" type="text/javascript"></script>
-<script src="~/Recursos/FontEnd/js/jquery-2.2.3.min.js"></script>
-    <script>
-    $(document).ready(function (e) {
-        $('#MisTareas').load('/Tareas/TodasTareasEmpleador', function (data) {
-            $(this).html(data);
+    <script src="@Url.Content("~/Recursos/FrontEnd/js/jquery-2.0.3.min.js")" type="text/javascript"></script>
+    <script src="~/Recursos/FontEnd/js/jquery-2.2.3.min.js"></script>
+        <script>
+        $(document).ready(function (e) {
+            $('#MisTareas').load('/Tareas/TodasTareasEmpleador', function (data) {
+                $(this).html(data);
+            })
         })
-    })
-    </script>
+        </script>
 
-@if (ViewBag.Filtro != null)
-{
-    <script type="text/javascript">
-    $(document).ready(function () {
-        $('#Filtro').click(function () {
-            $('#MisTareas').load('/Tareas/FiltroTareas');
+    @if (ViewBag.Filtro != null)
+    {
+        <script type="text/javascript">
+        $(document).ready(function () {
+            $('#Filtro').click(function () {
+                $('#MisTareas').load('/Tareas/FiltroTareas');
+            })
         })
-    })
-    </script>
-}
-
-<script type="text/javascript">
-    $(document).ready(function () {
-        $('#pestmtareas').click(function () {
-            $('#subirtareas').load('/Tareas/Index');
-        })
-    })
-</script>
-
-<script type="text/javascript">
-    $(document).ready(function () {
-        $('#pestPerfil').click(function () {
-            $('#perfil').load('/Usuario/VerPerfil');
-            //$('#perfil').load('/Tareas/VistaCAlif');
-        })
-    })
-</script>
-
-<script type="text/javascript">
-    $(document).ready(function () {
-        $('#pestMensajes').click(function () {
-            $('#mismensajes').load('/Usuario/mesajesusuarios');
-        })
-    })
-</script>
-
-<!--Plug-in Initialisation-->
-<script type="text/javascript">
-    $(document).ready(function() {
-        //Horizontal Tab
-        $('#parentHorizontalTab').easyResponsiveTabs({
-            type: 'default', //Types: default, vertical, accordion
-            width: 'auto', //auto or any width like 600px
-            fit: true, // 100% fit in a container
-            tabidentify: 'hor_1', // The tab groups identifier
-            activate: function(event) { // Callback function if tab is switched
-                var $tab = $(this);
-                var $info = $('#nested-tabInfo');
-                var $name = $('span', $info);
-                $name.text($tab.text());
-                $info.show();
-            }
-        });
-    });
-</script>
-
-
-<!-- start-date-piker -->
-<script src="~/Recursos/FontEnd/js/clockpicker.js"></script>
-<link rel="stylesheet" href="~/Recursos/FontEnd/css/jquery-ui.css">
-<script src="~/Recursos/FontEnd/js/jquery-ui.js"></script>
-<script>
-    $(function () {
-        $("#datepicker,#datepicker1").datepicker();
-    });
-</script>
-<script>
-    $(function () {
-        $('.clockpicker').clockpicker();
-    });
-</script>
-<!-- /End-date-piker -->
-<!-- Combo tipotarea -->
-<script>
-    (function () {
-        $("#cmbClas").load("/Tareas/ListarTipoTarea")
-    }())
-    function valida(e){
-        tecla = (document.all) ? e.keyCode : e.which;
+        </script>
     }
-</script>
-<!--Fin Combo tipotarea -->
-<!-- // Pay -->
+
+    <script type="text/javascript">
+        $(document).ready(function () {
+            $('#pestmtareas').click(function () {
+                $('#subirtareas').load('/Tareas/Index');
+            })
+        })
+    </script>
+
+    <script type="text/javascript">
+        $(document).ready(function () {
+            $('#pestPerfil').click(function () {
+                $('#perfil').load('/Usuario/VerPerfil');
+                //$('#perfil').load('/Tareas/VistaCAlif');
+            })
+        })
+    </script>
+    <script type="text/javascript">
+        $(document).ready(function () {
+            $('#pestFinalizar').click(function () {
+                $('#Finalizar').load('/Tareas/VerPerfil');
+                //$('#perfil').load('/Tareas/VistaCAlif');
+            })
+        })
+    </script>
+
+    <script type="text/javascript">
+        $(document).ready(function () {
+            $('#pestMensajes').click(function () {
+                $('#mismensajes').load('/Usuario/mesajesusuarios');
+            })
+        })
+    </script>
+
+    <!--Plug-in Initialisation-->
+                <script type="text/javascript">
+                    $(document).ready(function () {
+                        //Horizontal Tab
+                        $('#parentHorizontalTab').easyResponsiveTabs({
+                            type: 'default', //Types: default, vertical, accordion
+                            width: 'auto', //auto or any width like 600px
+                            fit: true, // 100% fit in a container
+                            tabidentify: 'hor_1', // The tab groups identifier
+                            activate: function (event) { // Callback function if tab is switched
+                                var $tab = $(this);
+                                var $info = $('#nested-tabInfo');
+                                var $name = $('span', $info);
+                                $name.text($tab.text());
+                                $info.show();
+                            }
+                        });
+                    });
+                </script>
+
+
+                <!-- start-date-piker -->
+                <script src="~/Recursos/FontEnd/js/clockpicker.js"></script>
+                <link rel="stylesheet" href="~/Recursos/FontEnd/css/jquery-ui.css">
+                <script src="~/Recursos/FontEnd/js/jquery-ui.js"></script>
+                <script>
+                    $(function () {
+                        $("#datepicker,#datepicker1").datepicker();
+                    });
+                </script>
+                <script>
+                    $(function () {
+                        $('.clockpicker').clockpicker();
+                    });
+                </script>
+                <!-- /End-date-piker -->
+                <!-- Combo tipotarea -->
+                <script>
+                    (function () {
+                        $("#cmbClas").load("/Tareas/ListarTipoTarea")
+                    }())
+                    function valida(e) {
+                        tecla = (document.all) ? e.keyCode : e.which;
+                    }
+                </script>
+                <!--Fin Combo tipotarea -->
+                <!-- // Pay -->
