Cualquier cosa me avisas Maple

--- a/ProyectoUniJob/ProyectoUniJob/Views/Tareas/EnviarCorreo.cshtml
+++ b/ProyectoUniJob/ProyectoUniJob/Views/Tareas/EnviarCorreo.cshtml
@@ -11,7 +11,7 @@
             <h3>@Model.Titulo</h3>
             <div class="col-md-12 bann-info">
                 <div class="row">
-                    <button class="btn btn-success right" type="submit">Finalizar tarea</button>
+                    <button class="btn btn-success right" style="background-color:#46A69B;" type="submit">Finalizar tarea</button>
                 </div>
             </div>
         }
