--- a/ProyectoUniJob/ProyectoUniJob/Views/Tareas/FiltroTareas.cshtml
+++ b/ProyectoUniJob/ProyectoUniJob/Views/Tareas/FiltroTareas.cshtml
@@ -15,7 +15,7 @@
                 </select>
             </div>
             <div class="col-lg-3">
-                <button id="btnAceptar" class="btn btn-success">Aceptar</button>
+                <button id="btnAceptar" class="btn btn-success" style="background-color:#46A69B;" >Aceptar</button>
             </div>
         </div>
     @* } *@
