--- a/ProyectoUniJob/ProyectoUniJob/Views/Tareas/FinalizarTarea.cshtml
+++ b/ProyectoUniJob/ProyectoUniJob/Views/Tareas/FinalizarTarea.cshtml
@@ -49,7 +49,7 @@
                                         <label>Comentario</label>
                                      <input name="comentario" type="text" class="form-control"/>
                                     <div class="row centrar">
-                                    <button class="btn btn-success" name="Enviar" type="submit" value="2" >Enviar</button>
+                                    <button class="btn btn-success" style="background-color:#46A69B;"  name="Enviar" type="submit" value="2" >Enviar</button>
                                     </div>
 
                                     </div>
