--- a/ProyectoUniJob/ProyectoUniJob/Views/Usuario/VerPerfil.cshtml
+++ b/ProyectoUniJob/ProyectoUniJob/Views/Usuario/VerPerfil.cshtml
@@ -90,7 +90,7 @@
     <div class="row">
         <div class="col-sm-8"></div>
         <div class="col-sm-4">
-            <button type="submit" class="form-control btn btn-primary">Actualizar</button>
+            <button type="submit" class="form-control btn btn-primary" style="background-color:#46A69B;" >Actualizar</button>
         </div>
     </div>
 }
