--- a/ProyectoUniJob/ProyectoUniJob/Views/Usuario/mesajesusuarios.cshtml
+++ b/ProyectoUniJob/ProyectoUniJob/Views/Usuario/mesajesusuarios.cshtml
@@ -82,7 +82,7 @@
                                                     </div>
                                                     <div class="row centrar">
                                                         <div class="col-sm-12">
-                                                            <button type="submit" class="btn btn-success" name="agregar" value="1">Enviar</button>
+                                                            <button type="submit" class="btn btn-success" style="background-color:#46A69B;"  name="agregar" value="1">Enviar</button>
                                                         </div>
                                                     </div>
                                                 }
