--- a/ProyectoUniJob/ProyectoUniJob/Views/FrontEnd/MasterPage/_layoutUsuarios.cshtml
+++ b/ProyectoUniJob/ProyectoUniJob/Views/FrontEnd/MasterPage/_layoutUsuarios.cshtml
@@ -49,16 +49,14 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
         <div class="container">
             <!--logo-->
             <div class="logo">
-                <img width="67px" src="~/Recursos/FontEnd/images/logo verde.png" />
-                <h1 style="display: inline;"><a href="index.html">CollegeJob</a></h1>
+                <img width="67px" src="~/Recursos/FontEnd/images/logoCollegeJob.png">
+                <h1 style="display: inline;"><a href="index.html" style="color:#46A69B;">CollegeJob</a></h1>
             </div>
-            
-
 
             <!--//logo-->
 
             <div class="w3layouts-login">
-                <a href=@Url.Action("CerrarSesion", "Usuario")><i class="glyphicon glyphicon-user"></i> Cerrar sesión</a>
+                <a href=@Url.Action("CerrarSesion", "Usuario") style="color:cyan;"><i class="glyphicon glyphicon-user"></i> Cerrar sesión</a>
             </div>
             <div class="clearfix"></div>
         </div>
