--- a/ProyectoUniJob/ProyectoUniJob/Views/Usuario/IndexEstudiante.cshtml
+++ b/ProyectoUniJob/ProyectoUniJob/Views/Usuario/IndexEstudiante.cshtml
@@ -3,6 +3,8 @@
     Layout = "~/Views/FrontEnd/MasterPage/_layoutUsuarios.cshtml";
 }
 <link href="~/Recursos/FontEnd/css/subasta.css" rel="stylesheet" />
+<link href="~/Recursos/FontEnd/css/cardstyle.css" rel="stylesheet" />
+
 <div class="w3layouts-breadcrumbs text-center">
     <div class="container">
         <span class="agile-breadcrumbs"><a href=@Url.Action("IndexEstudiante", "Usuario")><i class="fa fa-home home_1"></i></a> / <span>Estudiante</span></span>
@@ -22,6 +24,7 @@
                 <li id="pestAceptar">Aceptar Tareas</li>
                 <li id="pestMensajes">Mensajes</li>
                 <li id="pestPerfil">Perfil</li>
+                <li id="pestPruebas">Pruebas</li>
             </ul>
             <div class="resp-tabs-container hor_1">
                 <div id="Inicio">
@@ -31,33 +34,33 @@
                 <!--Todas las tareas-->
                 <div>
                     Busca las tareas
-@using (Ajax.BeginForm("VariablesTareaBusqueda", "Usuario", new AjaxOptions() { HttpMethod = "POST" }, new { enctype = "multipart/form-data" }))
-{
-                    <div class="row">
-                        <div class="col-md-4">
-                            Tipo de tarea:
-                            @Html.DropDownList("categoria", (IEnumerable<SelectListItem>)ViewBag.PriorityID, new { @class = "form-control  border-input" })
-                        </div>
-                        <div class="col-md-4">
-                            <p>Distancia: <span id="demo"></span> Km</p>
-                            <input id="Rango" type="range" name="Rango" min="1" max="50" step="1" value="1">
-                        </div>
-                        <div class="col-md-4 centar">
-                            <button type="submit" class="btn btn-default boton">Buscar</button>
-                        </div>
-                    </div>
-                    <div>
-                        <div>
-                           @*Latitud:*@<input type="hidden" id="txtLatitud" name="txtLatitud"/>
+                    @using (Ajax.BeginForm("VariablesTareaBusqueda", "Usuario", new AjaxOptions() { HttpMethod = "POST" }, new { enctype = "multipart/form-data" }))
+                    {
+                        <div class="row">
+                            <div class="col-md-4">
+                                Tipo de tarea:
+                                @Html.DropDownList("categoria", (IEnumerable<SelectListItem>)ViewBag.PriorityID, new { @class = "form-control  border-input" })
+                            </div>
+                            <div class="col-md-4">
+                                <p>Distancia: <span id="demo"></span> Km</p>
+                                <input id="Rango" type="range" name="Rango" min="1" max="50" step="1" value="1">
+                            </div>
+                            <div class="col-md-4 centar">
+                                <button type="submit" class="btn btn-default boton">Buscar</button>
+                            </div>
                         </div>
                         <div>
-                            @*Longitud:*@<input type="hidden" id="txtLongitud" name="txtLongitud" />
+                            <div>
+                                @*Latitud:*@<input type="hidden" id="txtLatitud" name="txtLatitud" />
+                            </div>
+                            <div>
+                                @*Longitud:*@<input type="hidden" id="txtLongitud" name="txtLongitud" />
+                            </div>
                         </div>
-                    </div>
-}
+                    }
 
                     <div class="centar">
-                        Resultado de la busqueda:  
+                        Resultado de la busqueda:
                         <button type="submit" class="btn btn-default boton" onclick="busqueda()">Mostar</button>
                     </div>
                     <div id="alltareas">
@@ -65,28 +68,35 @@
 
                     </div>
                 </div>
-                <!--Fin Tareas--> 
-
+                <!--Fin Tareas-->
                 <!--Pestaña tareas Aceptar-->
                 <div id="Aceptar">
 
                 </div>
-                <!--Fin pestaña Aceptar-->               
-
+                <!--Fin pestaña Aceptar-->
                 <!--Pestaña mensajes-->
                 <div id="mismensajes">
-                    
+
                 </div>
                 <!--Fin mensajes-->
-
-
                 <!--Pestaña perfil-->
                 <div id="perfil">
                 </div>
                 <!--Fin pestaña perfil-->
 
-                
-            </div>
+                <div id="pruebas">
+                    <div class="band">
+                        <div class="item-5">
+                            <a href="https://design.tutsplus.com/tutorials/stranger-things-inspired-text-effect--cms-27139" class="card">
+                                <div class="thumb" style="background-image: url(https://s3-us-west-2.amazonaws.com/s.cdpn.io/210284/strange.jpg);"></div>
+                                <article>
+                                    <h1>How to Create a “Stranger Things” Text Effect in Adobe Photoshop</h1>
+                                </article>
+                            </a>
+                        </div>
+                    </div>                   
+
+                </div>
         </div>
     </div>
 </div>
@@ -155,14 +165,14 @@
 
 <!--Plug-in Initialisation-->
 <script type="text/javascript">
-    $(document).ready(function() {
+    $(document).ready(function () {
         //Horizontal Tab
         $('#parentHorizontalTab').easyResponsiveTabs({
             type: 'default', //Types: default, vertical, accordion
             width: 'auto', //auto or any width like 600px
             fit: true, // 100% fit in a container
             tabidentify: 'hor_1', // The tab groups identifier
-            activate: function(event) { // Callback function if tab is switched
+            activate: function (event) { // Callback function if tab is switched
                 var $tab = $(this);
                 var $info = $('#nested-tabInfo');
                 var $name = $('span', $info);
@@ -175,37 +185,35 @@
 
 <!--nuevo codigo que va en la parte de buscar tareas por codigo -->
 <script>
-var slider = document.getElementById("Rango");
-var output = document.getElementById("demo");
-output.innerHTML = slider.value;
+    var slider = document.getElementById("Rango");
+    var output = document.getElementById("demo");
+    output.innerHTML = slider.value;
 
-slider.oninput = function() {
-  output.innerHTML = this.value;
-}
+    slider.oninput = function () {
+        output.innerHTML = this.value;
+    }
 </script>
 
 <script src="~/Recursos/FontEnd/js/jquery-1.7.1.min.js"></script>
 <script type="text/javascript">
-			$(document).on("ready", function(){
-				var options = {
-					enableHighAccuracy: true,
-					timeout: 45000
-				};
-				navigator.geolocation.getCurrentPosition(GetPosition,funcionError, options);
-				function GetPosition(posicion)
-				{
-					var latitud = posicion.coords.latitude;
-					var longitud = posicion.coords.longitude;
-					$("#txtLatitud").val(latitud);
-					$("#txtLongitud").val(longitud);
-					GetMap(latitud,longitud);
-				}
-				function funcionError(error)
-				{
-					alert(error.message);
-				}
+    $(document).on("ready", function () {
+        var options = {
+            enableHighAccuracy: true,
+            timeout: 45000
+        };
+        navigator.geolocation.getCurrentPosition(GetPosition, funcionError, options);
+        function GetPosition(posicion) {
+            var latitud = posicion.coords.latitude;
+            var longitud = posicion.coords.longitude;
+            $("#txtLatitud").val(latitud);
+            $("#txtLongitud").val(longitud);
+            GetMap(latitud, longitud);
+        }
+        function funcionError(error) {
+            alert(error.message);
+        }
 
-			})
+    })
 </script>
 
 <script src="@Url.Content("~/Recursos/BackEnd/js/jquery-2.0.3.min.js")" type="text/javascript"></script>
