--- a/ProyectoUniJob/ProyectoUniJob/Views/PerfilAdmin/DatosPerfil.cshtml
+++ b/ProyectoUniJob/ProyectoUniJob/Views/PerfilAdmin/DatosPerfil.cshtml
@@ -24,7 +24,10 @@
                     </div>
                     <div class="content">
                         <div class="author">
-                            <img class="avatar border-white" src="~/Recursos/BackEnd/img/@row["Imagen"]" width="200" height="200">
+                            @{ 
+                                string Foto = "data:image / jpeg; base64," + Convert.ToBase64String((byte[])row["Imagen"]);
+                            }
+                            <img class="avatar border-white" src="@Foto" width="200" height="200">
                             <h4 class="title">
                                 @row["Nombre"]<br>
                                 @row["Apellidos"]
@@ -103,7 +106,7 @@
                                 <div class="col-md-4">
                                     <div class="form-group">
                                         <label>Imagen</label>
-                                        <input type="hidden" class="form-control border-input" name="img" placeholder="img" value="@row["Imagen"]" readonly="readonly" />
+                                        <input type="hidden" class="form-control border-input" name="img" placeholder="img" value="@Convert.ToBase64String((byte[])row["Imagen"])" readonly="readonly" />
                                         <input type="file" class="form-control border-input" name="Imagen" placeholder="Imagen" value="@row["Imagen"]" accept=".png, .jpg, .jpeg" />
                                     </div>
                                 </div>
