--- a/ProyectoUniJob/ProyectoUniJob/Views/Tareas/TareaSeleccionada.cshtml
+++ b/ProyectoUniJob/ProyectoUniJob/Views/Tareas/TareaSeleccionada.cshtml
@@ -5,6 +5,14 @@
     Layout = "~/Views/FrontEnd/MasterPage/_layoutUsuarios.cshtml";
 }
 
+@*carrosel*@
+@*<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" />*@
+<link href="~/Recursos/BackEnd/css/estilospersonalesmaple.css" rel="stylesheet" />
+
+
+
 <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/bootstrap/3.0.3/css/bootstrap-theme.min.css" />
 <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
 
@@ -30,7 +38,99 @@
                                     <div class="movie-ticket-book">
                                        <div class="row">
                                            <div class="col-lg-12">
-                                               <img src="~/Recursos/FontEnd/images/movie-show.jpg" alt="" />
+                                               @*<img src="~/Recursos/FontEnd/images/movie-show.jpg" alt="" />*@
+                                               <div id="myCarousel" class="carousel slide" data-ride="carousel">
+                                                   <!-- Indicators -->
+                                                   <ol class="carousel-indicators">
+                                                       @*<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                                                       <li data-target="#myCarousel" data-slide-to="1"></li>
+                                                       <li data-target="#myCarousel" data-slide-to="2"></li>
+                                                       <li data-target="#myCarousel" data-slide-to="3"></li>*@
+                                                       @{
+                                                           DataTable contenido = ViewData["Imagenes"] as DataTable;
+                                                           int numerofilas = contenido.Rows.Count;
+                                                           int n = 0;
+                                                           if (numerofilas == 0)
+                                                           {
+                                                            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                                                           }
+                                                           else
+                                                           {
+                                                               for (int i = 0; i < numerofilas; i++)
+                                                               {
+                                                                   if (i == 0)
+                                                                   {
+                                                                    <li data-target="#myCarousel" data-slide-to="@i" class="active"></li>
+                                                                   }
+                                                                   else
+                                                                   {
+                                                                    <li data-target="#myCarousel" data-slide-to="@i"></li>
+                                                                   }
+                                                               }
+                                                           }
+
+                                                    }
+                                                   </ol>
+
+                                                   <!-- Wrapper for slides -->
+                                                   <div class="carousel-inner" role="listbox">
+                                                       @*<div class="item active">
+                                                           <img src="http://unsplash.s3.amazonaws.com/batch%209/barcelona-boardwalk.jpg" alt="Facebook" class="img-responsive">
+                                                       </div>
+                                                       <div class="item">
+                                                           <img src="http://unsplash.s3.amazonaws.com/batch%209/barcelona-boardwalk.jpg" alt="Geolocalisacion" class="img-responsive">
+                                                       </div>
+                                                       <div class="item">
+                                                           <img src="http://unsplash.s3.amazonaws.com/batch%209/barcelona-boardwalk.jpg" alt="Pedir" class="img-responsive">
+                                                       </div>
+                                                       <div class="item">
+                                                           <img src="http://unsplash.s3.amazonaws.com/batch%209/barcelona-boardwalk.jpg" alt="Recibir" class="img-responsive">
+                                                       </div>*@
+                                                       @{
+                                                           DataTable imagenesreal = ViewData["Imagenes"] as DataTable;
+                                                           if (numerofilas == 0)
+                                                           {
+                                                            <div class="item active">
+                                                                <img src="~/Recursos/FontEnd/images/movie-poster.jpg" alt="Facebook" class="img-responsive">
+                                                            </div>
+                                                           }
+                                                           else
+                                                           {
+                                                               int indice = 0;
+                                                               foreach (DataRow filas in imagenesreal.Rows)
+                                                               {
+                                                                   
+                                                                   string Foto = "data:image / jpeg; base64," + Convert.ToBase64String((byte[])filas["Imagen"]);
+                                                                   if (indice == 0)
+                                                                   {
+                                                                    <div class="item active">
+                                                                        <img src="@Foto" alt="Facebook" class="img-responsive">
+                                                                    </div>
+                                          
+                                                                   }
+                                                                   else
+                                                                   {
+                                                                    <div class="item">
+                                                                        <img src="@Foto" alt="Pedir" class="img-responsive">
+                                                                    </div>
+                                                                   }
+                                                                   indice = indice + 1;
+                                                               }
+                                                           }
+
+                                                    }
+                                                   </div>
+
+                                                   <!-- Left and right controls -->
+                                                   <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+                                                       <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                                                       <span class="sr-only">Previous</span>
+                                                   </a>
+                                                   <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+                                                       <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                                                       <span class="sr-only">Next</span>
+                                                   </a>
+                                               </div>
                                            </div>
                                        </div>
                                         @*<div class="row">
