--- a/ProyectoUniJob/ProyectoUniJob/Views/Usuario/IndexEmpleador.cshtml
+++ b/ProyectoUniJob/ProyectoUniJob/Views/Usuario/IndexEmpleador.cshtml
@@ -2,7 +2,7 @@
     ViewBag.Title = "IndexEmpleador";
     Layout = "~/Views/FrontEnd/MasterPage/_layoutUsuarios.cshtml";
 }
-
+<link href="~/Recursos/FontEnd/css/cardstyle.css" rel="stylesheet" />
 <div class="w3layouts-breadcrumbs text-center">
     <div class="container">
         <span class="agile-breadcrumbs"><a href=@Url.Action("IndexEmpleador", "PrincipalFE")><i class="fa fa-home home_1"></i></a> / <span>Empleador</span></span>
@@ -38,6 +38,11 @@
                 </div>
                 <div class="col-lg-3">
                     <button class="btn btn-success">Aceptar</button>
+                </div>
+            </div>
+            <div class="row">
+                <div style="height:50px;">
+
                 </div>
             </div>
 }
