--- a/ProyectoUniJob/ProyectoUniJob/Views/Usuario/IndexEstudiante.cshtml
+++ b/ProyectoUniJob/ProyectoUniJob/Views/Usuario/IndexEstudiante.cshtml
@@ -63,6 +63,9 @@
                         Resultado de la busqueda:
                         <button type="submit" class="btn btn-default boton" onclick="busqueda()">Mostar</button>
                     </div>
+                    <div style="height:50px;">
+
+                    </div>
                     <div id="alltareas">
 
 
@@ -94,11 +97,13 @@
                                 </article>
                             </a>
                         </div>
+                       
                     </div>                   
 
                 </div>
         </div>
     </div>
+</div>
 </div>
 
 @if (ViewBag.Tarea != null)
