--- a/ProyectoUniJob/ProyectoUniJob/Views/Usuario/VerPerfil.cshtml
+++ b/ProyectoUniJob/ProyectoUniJob/Views/Usuario/VerPerfil.cshtml
@@ -19,10 +19,13 @@
                     <div class="row">
                         <div class="col-md-4">
                             <div class="movie-ticket-book">
-                                <img src="~/Recursos/FontEnd/images/@row["Imagen"]" alt="" width="300" height="400"/>
+                                @{
+                                    string Foto = "data:image / jpeg; base64," + Convert.ToBase64String((byte[])row["Imagen"]);
+                                }
+                                <img src="@Foto" alt="" width="300" height="400"/>
                                 <input type="hidden" class="form-control border-input" name="ID" placeholder="ID" value="@row["Codigo"]" readonly="readonly" />
                             </div>
-                            <input type="hidden" class="form-control border-input" name="img" placeholder="img" value="@row["Imagen"]" readonly="readonly" />
+                            <input type="hidden" class="form-control border-input" name="img" placeholder="img" value="@Convert.ToBase64String((byte[])row["Imagen"])" readonly="readonly" />
                             <input type="file" class="form-control border-input" name="Imagen" placeholder="Imagen" value="@row["Imagen"]" />
                         </div>
                         <div class="col-md-8 movies-dates">
