--- a/ProyectoUniJob/ProyectoUniJob/Views/Usuario/IndexEmpleador.cshtml
+++ b/ProyectoUniJob/ProyectoUniJob/Views/Usuario/IndexEmpleador.cshtml
@@ -68,7 +68,7 @@
                 <!--Fin perfil-->
                 <!--Finalizar-->
                     <div id="Finalizar">        
-                        @{ Html.RenderAction("EnviarCorreoView", "Tareas");}
+                        @*@{ Html.RenderAction("EnviarCorreoView", "Tareas");}*@
                     </div>
                     <!--Fin Finalizar-->
                     </div>
